# devscale-ai-assignment1

./: Dockerfile  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 2c740a91db9f_init_db.py
app/: database.py  main.py  schema.py
app/routes/: books.py
data/: dev.db
